fixed FAQs text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,3 +119,6 @@ footer{
 .questions{
     margin-top: 2rem;
 }
+h2{
+    text-align: left;
+}
